# Chronio

./: .gitignore  CNAME  index.html  manifest.json  manifest.webmanifest  package-lock.json  package.json  sw.js  tailwind.config.js  vite.config.js
assets/: index-BOo-khGM.js  index-BlDU9U7g.css  virtual_pwa-register-BhzCzKPz.js
download/: index.html  style.css
public/: sw.js
scripts/: deploy-gh-pages.ps1  make-zip.ps1
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: InstallPrompt.jsx  Modal.jsx  Navbar.jsx  TaskModal.jsx  Timeline.jsx
src/components/labels/: LabelPill.jsx
src/hooks/: useLocalTasks.js  useUserLabels.js
src/pages/: Dashboard.jsx  Welcome.jsx  Year.jsx
src/theme/: ThemeContext.jsx
src/utils/: date.js
